--- a/Informacion/faq.html
+++ b/Informacion/faq.html
@@ -2,16 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
   <title>FAQ | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -33,26 +33,8 @@
       }
     }
   </script>
-
-  <style>
-    body { background-color: #004E85; }
-    .cursor-blink::after {
-      content: '|';
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-  </style>
 </head>
-<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
-
+<body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
@@ -64,74 +46,115 @@
         </div>
       </div>
       <nav class="flex items-center gap-6 text-sm font-medium">
-          <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
-        <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver</a>
-        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
+        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+          <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
+        </a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto px-6 py-12 md:py-20">
+  <main class="max-w-5xl mx-auto px-6 py-12">
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
-      <a href="/Informacion/informacion" class="hover:underline">Información</a>
+      <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
-      <span class="text-white">Preguntas Frecuentes</span>
+      <span class="text-white font-semibold">Preguntas Frecuentes</span>
     </nav>
 
-    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
+    <div class="mb-12">
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Respuestas Directas
       </h1>
+      <p class="text-cura-accentLight max-w-2xl">
+        Transparencia absoluta sobre el funcionamiento, la seguridad y el financiamiento de la Ley C.U.R.A.
+      </p>
+    </div>
 
-      <div class="prose prose-invert max-w-none">
-        <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink"></p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
+          ¿Cómo se garantiza que mis datos no sean alterados?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Implementamos una capa de <strong>Blockchain Gubernamental</strong>. Cada vez que se consulta o edita tu historial, se genera un registro inmutable. Esto permite verificar la integridad de la información en cualquier momento, con validez legal por 10 años.
+        </p>
       </div>
 
-      <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-        <p class="text-cura-accentLight text-sm italic">Transparencia absoluta para el ciudadano.</p>
-        <div class="flex gap-4">
-          <a href="/Informacion/recursos" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Siguiente: Recursos Descargables
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
-          </a>
-        </div>
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-shield-warning text-cura-accent text-2xl"></i>
+          ¿Si pierdo mi credencial, ven mi información?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          No. El sistema utiliza <strong>Acceso Segmentado</strong>. El farmacéutico solo ve recetas, mientras que emergencias solo ve datos críticos. Además, mediante <strong>CURA-ID</strong>, recibes una notificación inmediata en tu celular ante cualquier intento de acceso.
+        </p>
       </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-robot text-cura-accent text-2xl"></i>
+          ¿La IA reemplazará al médico?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Nunca. La IA es una herramienta de <strong>Soporte Diagnóstico</strong>. Actúa como una "segunda opinión" científica de alta precisión, pero el profesional médico mantiene siempre la decisión final y la responsabilidad clínica.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-bank text-cura-accent text-2xl"></i>
+          ¿De dónde sale el dinero para el sistema?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se financia mediante <strong>Neutralidad Fiscal</strong>: se unifican las partidas informáticas dispersas y se reinvierte el 100% de los ahorros generados por la digitalización y la reducción de fraudes operativos, bajo auditoría de la <strong>SIGEN</strong>.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-wifi-slash text-cura-accent text-2xl"></i>
+          ¿Qué sucede si no hay conexión a internet?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          C.U.R.A. posee un <strong>Módulo de Resiliencia</strong>. Los datos se cargan de forma local y encriptada, sincronizándose automáticamente con la nube de <strong>ARSAT</strong> apenas se restablece la conexión (vía fibra o satélite).
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-buildings text-cura-accent text-2xl"></i>
+          ¿Es obligatorio para el sector privado?
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Sí. La ley es de <strong>Orden Público</strong>. Todos los actores (PAMI, Obras Sociales, Prepagas) deben interoperar con C.U.R.A. para que el ciudadano sea el verdadero dueño de su información y pueda atenderse en cualquier lugar del país.
+        </p>
+      </div>
+
+      <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
+        <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
+          <i class="ph-bold ph-device-mobile text-cura-accent text-3xl"></i>
+          ¿Puedo ver mis datos desde el celular?
+        </h3>
+        <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
+          Sí. El acceso multiplataforma está garantizado a través de un <strong>Portal Web oficial</strong> o mediante la integración completa con la aplicación <strong>Mi Argentina</strong>. Esto permite que el ciudadano tenga su historial de salud siempre a mano, con la misma validez legal que un documento físico.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
+      <p class="text-cura-accentLight text-sm italic">Transparencia absoluta para el ciudadano.</p>
+      <a href="/Informacion/recursos" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+        Siguiente: Recursos Descargables
+        <i class="ph-bold ph-arrow-right"></i>
+      </a>
     </div>
   </main>
 
-  <footer class="py-12 border-t border-white/10 text-center">
-    <p class="text-sm text-white/40">Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
+  <footer class="py-12 border-t border-white/10 text-center mt-auto">
+    <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const textElement = document.getElementById('typewriter-text');
-      
-      const textToType = `<strong>¿Cómo se garantiza que mis datos no sean alterados?</strong><br>Implementamos una capa de <strong>Blockchain Gubernamental</strong>. Cada vez que se consulta o edita tu historial, se genera un registro inmutable. Esto permite verificar la integridad de la información en cualquier momento, con validez legal por 10 años.<br><br><strong>¿Si pierdo mi credencial, pueden ver toda mi información?</strong><br>No. El sistema utiliza <strong>Acceso Segmentado</strong>. El farmacéutico solo ve recetas, mientras que emergencias solo ve datos críticos. Además, mediante <strong>CURA-ID</strong>, recibes una notificación inmediata en tu celular ante cualquier intento de acceso.<br><br><strong>¿La Inteligencia Artificial reemplazará al médico?</strong><br>Nunca. La IA es una herramienta de <strong>Soporte Diagnóstico</strong>. Actúa como una "segunda opinión" científica de alta precisión, pero el profesional médico mantiene siempre la decisión final y la responsabilidad clínica.<br><br><strong>¿De dónde sale el dinero para el sistema?</strong><br>Se financia mediante <strong>Neutralidad Fiscal</strong>: se unifican las partidas informáticas dispersas y se reinvierte el 100% de los ahorros generados por la digitalización y la reducción de fraudes operativos, bajo auditoría de la <strong>SIGEN</strong>.<br><br><strong>¿Qué sucede si no hay conexión a internet?</strong><br>C.U.R.A. posee un <strong>Módulo de Resiliencia</strong>. Los datos se cargan de forma local y encriptada, sincronizándose automáticamente con la nube de <strong>ARSAT</strong> apenas se restablece la conexión (vía fibra o satélite).<br><br><strong>¿Es obligatorio para el sector privado y prepagas?</strong><br>Sí. La ley es de <strong>Orden Público</strong>. Todos los actores (PAMI, Obras Sociales, Prepagas) deben interoperar con C.U.R.A. para que el ciudadano sea el verdadero dueño de su información y pueda atenderse en cualquier lugar del país.<br><br><strong>¿Puedo ver mis datos desde el celular?</strong><br>Sí. El acceso multiplataforma está garantizado a través de un <strong>Portal Web oficial</strong> o mediante la integración completa con la aplicación <strong>Mi Argentina</strong>.`;
-
-      let i = 0;
-      const speed = 5; 
-
-      function typeWriter() {
-        if (i < textToType.length) {
-          if (textToType.charAt(i) === '<') {
-            let endTag = textToType.indexOf('>', i);
-            if (endTag !== -1) {
-              i = endTag + 1;
-            }
-          } else {
-            i++;
-          }
-          textElement.innerHTML = textToType.substring(0, i);
-          setTimeout(typeWriter, speed);
-        } else {
-          textElement.classList.remove('cursor-blink');
-        }
-      }
-
-      setTimeout(typeWriter, 500);
-    });
-  </script>
 </body>
 </html>
